Add a new class to wrap mongoose timers and improve funcitonality. Update examples and docs

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,4 @@
-TARGET_NAMES = endpoints redirect http_get http_post
+TARGET_NAMES = endpoints redirect http_get http_post timers
 
 BUILD_DIR ?= build
 
